# simulation

./: .gitignore  CMakeLists.txt  IVehicle.cpp  IVehicle.h  NetworkParser.cpp  NetworkParser.h  README.md  Road.cpp  Road.h  build_all.sh  core.20005  core.20830  core.21540  core.21673  core.21857  core.22844  core.23828  main.cpp  run_examples.sh
CLionProjects/PSE/: CMakeLists.txt  Road.cpp  Road.h
engine/: Color.h  Figure.cpp  Figure.h  Light.h  Line2D.cpp  Line2D.h  Makefile  README.md  ZBuffer.cpp  ZBuffer.h  easy_image.cc  easy_image.h  engine.cc  ini_configuration.cc  ini_configuration.h
engine/l_parser/: l_parser.cc  l_parser.h
engine/tests/: stochastic_l_system1.L2D  stochastic_l_system2.L2D  stochastic_l_system3.L3D  stochastic_l_system_2d_1.ini  stochastic_l_system_2d_2.ini  stochastic_l_system_3d.ini  textured_interpolation.ini  textured_shadows_1.ini  textured_shadows_fractal.ini
engine/vector/: vector3d.cc  vector3d.h
inputfiles/: spec1.0.xml  spec2.0.xml
inputfiles/extra_examples/: full_simulation.xml
inputfiles/interesting_tests/: light-overtake.xml
inputfiles/testinputs/: test1.xml  test10.xml  test11.xml  test12.xml  test13.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  test8.xml  test9.xml
inputfiles/use_case_test_files/: use_case_3.1.xml  use_case_3.2.xml  use_case_3.3.xml  use_case_3.4.xml  use_case_3.5.xml  use_case_3.6.xml  use_case_3.7.xml
opdracht/: afspraken.txt  todo.txt
outputfiles/testoutputs/: AbstractParserTester-LoadFile-expected.txt  NetworkExporterTester-AddSection(impression)-expected.txt  NetworkExporterTester-AddSection(simple)-expected.txt  NetworkExporterTester-CGExport(empty)-expected.txt  NetworkExporterTester-CGExport(full)-expected.txt  NetworkExporterTester-Init(impression)-expected.txt  NetworkExporterTester-Init(simple)-expected.txt  NetworkExporterTester-PrintLane(impression)-expected.txt  NetworkParserTester-ParseNetwork-expected.txt  RoadParserTester-ParseRoad-expected.txt  TrafficSignParserTester-ParseTrafficsign-expected.txt  VehicleParserTester-ParseVehicle-expected.txt
src/: Car.cpp  Car.h  IVehicle.cpp  IVehicle.h  Network.cpp  Network.h  NetworkParser.cpp  Road.cpp  Road.h  main.cpp  testMain.cpp
src/Parsers/: NetworkParser.cpp  NetworkParser.h  RoadParser.cpp  RoadParser.h  VAbstractParser.cpp  VAbstractParser.h  VehicleParser.cpp  VehicleParser.h
src/datatypes/: Car.cpp  Car.h  IVehicle.cpp  IVehicle.h  Motorcycle.cpp  Motorcycle.h  Network.cpp  Network.h  NetworkExporter.cpp  NetworkExporter.h  Road.cpp  Road.h  TrafficSigns.cpp  TrafficSigns.h  Vehicle.cpp  Vehicle.h  util.h
src/datatypes/Vehicles/: Bus.cpp  Bus.h  Car.cpp  Car.h  IVehicle.cpp  IVehicle.h  Motorcycle.cpp  Motorcycle.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h
src/datatypes/vehicles/: Bus.cpp  Car.cpp  IVehicle.cpp  IVehicle.h
src/exporters/: NetworkExporter.cpp  NetworkExporter.h  VehicleExporter.cpp  VehicleExporter.h
src/gui/: gui.cpp  gui.h  readme.txt
src/parsers/: NetworkParser.cpp  NetworkParser.h  RoadParser.cpp  RoadParser.h  TrafficSignParser.cpp  TrafficSignParser.h  VAbstractParser.cpp  VAbstractParser.h  VehicleParser.cpp  VehicleParser.h
src/tests/: AbstractParserTester.cpp  CarTester.cpp  DesignByContract.h  GuiTester.cpp  MotorcycleTester.cpp  NetworkExporterTester.cpp  NetworkParserTester.cpp  NetworkTester.cpp  RoadParserTester.cpp  RoadTest.cpp  RoadTester.cpp  TrafficSignParserTester.cpp  TrafficSignTester.cpp  TruckTester.cpp  Utils.cpp  Utils.h  VehicleParserTester.cpp  VehicleTester.cpp
(+3 files in other folders)
